fix handle unknown json properties and incorrect format its value